# battleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: cpp.yml
include/: state.h  state.hpp
include/entity/: button.h  button.hpp  coordinate.h  coordinate.hpp  grid.h  grid.hpp  shipNames.hpp  squareType.hpp  target.h  target.hpp
include/helpers/: backend.h  helpers.hpp  sprites.hpp  userInput.hpp
include/screen/: difficultySelection.h  difficultySelection.hpp  fleetPlacement.h  fleetPlacement.hpp  gameModeSelection.h  gameModeSelection.hpp  gameOver.h  gameOver.hpp  gameplay.h  gameplay.hpp  homepage.h  homepage.hpp  instructions.h  instructions.hpp  intermediary.h  intermediary.hpp  screenManager.h  screenManager.hpp  screenTemplate.h  screenTemplate.hpp  screens.h
res/: headerFormat.txt  sourceFormat.txt  testFormat.txt
src/: helpers.hpp  main.cpp  state.cpp
src/controllers/: screenManager.cpp  screenManager.hpp  screenTemplate.cpp  screenTemplate.hpp  state.cpp  state.hpp
src/entity/: button.cpp  button.hpp  coordinate.cpp  coordinate.hpp  grid.cpp  grid.hpp  target.cpp  target.hpp
src/enums/: screens.hpp  shipNames.hpp  squareType.hpp
src/helpers/: ImagesManager.cpp  ImagesManager.hpp  ScreenResourceManager.cpp  ScreenResourceManager.hpp  backend.cpp  helperFunctions.hpp  helpers.cpp  sprites.cpp  userInput.cpp
src/screen/: difficultySelection.cpp  fleetPlacement.cpp  gameModeSelection.cpp  gameOver.cpp  gameplay.cpp  homepage.cpp  instructions.cpp  intermediary.cpp  screenManager.cpp  screenTemplate.cpp
src/screens/: difficultySelection.cpp  difficultySelection.hpp  fleetPlacement.cpp  fleetPlacement.hpp  gameModeSelection.cpp  gameModeSelection.hpp  gameOver.cpp  gameOver.hpp  gameplay.cpp  gameplay.hpp  homepage.cpp  homepage.hpp  instructions.cpp  instructions.hpp  intermediary.cpp  intermediary.hpp
test/: CMakeLists.txt  assertions.hpp  environment.cpp  main.cpp  tests.h
test/architecture/: structure.cpp
test/cmake_modules/: FindSFML.cmake
test/integration/: CMakeLists.txt  test1.cpp
test/system/: CMakeLists.txt  environment.cpp
test/unit/: Makefile  ScreenTemplate.cpp  fleetPlacement.cpp  screenManager.cpp  screenTemplate.cpp
tests/: CMakeLists.txt  assertions.h  main.cpp  tests.h
tests/architecture/: environment.cpp  structure.cpp
tests/integration/: CMakeLists.txt  test1.cpp
tests/lib/: README.md
tests/system/: environment.cpp  test.cpp
tests/unit/: CMakeLists.txt  screenManager.cpp  screenTemplate.cpp
